# dazai-database

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Containerfile  devcontainer.json  postCreate.sh
nix/tools/: flake.nix
project/: SConstruct  demo.sh  jupyter-lab-nix.sh  rag.sh
project/notebooks/: test.ipynb
